# Green-AIHack

./: .gitignore  Demo 1.pptx  README.md  app.py  autoencoder.pth  candle_autoencoder.pth  capsules_autoencoder.pth  cashew_autoencoder.pth  chewinggum_autoencoder.pth  classification_model.py  emissions.csv  fryum_autoencoder.pth  macaroni1_autoencoder.pth  macaroni2_autoencoder.pth  pcb1_autoencoder.pth  pcb2_autoencoder.pth  pcb3_autoencoder.pth  pcb4_autoencoder.pth  pipe_fryum_autoencoder.pth  script  test_auto.py  train_auto.py
Dataset/chewinggum/: image_anno.csv
Dataset/macaroni2/: image_anno.csv
Dataset/pcb1/: image_anno.csv
Dataset/pcb2/: image_anno.csv
Dataset/pcb3/: image_anno.csv
Dataset/pcb4/: image_anno.csv
Dataset/pipe_fryum/: image_anno.csv
Donnees PCB4/: README.md  app.py  autoencoder.pth  emissions.csv  pyproject.toml  sepdonné.ipynb  test_auto.py  train_auto.py
