[tool.poetry]
name = "projet-alten"
version = "0.1.0"
description = ""
authors = ["Khadija0203 <adji.diaw@groupe-esigelec.org>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.6.0"
torchvision = "^0.21.0"
codecarbon = "^2.8.3"
transformers = "^4.48.3"
matplotlib = "^3.10.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
